--- a/services/edge_db_handler/package.json
+++ b/services/edge_db_handler/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bull": "^4.10.2",
     "express": "^4.18.2",
-    "pg": "^8.8.0"
-  }
+    "pg": "^8.8.0",
+    "got": "^12.5.2"
+  },
+  "type": "module"
 }
