--- a/services/drone_distribution/package.json
+++ b/services/drone_distribution/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "car_distribution",
+  "name": "drone_distribution",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
