--- a/services/challenge-handler/package.json
+++ b/services/challenge-handler/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drones_management",
+  "name": "challenge-handler",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
